update name and layout

--- a/scripts/popup.html
+++ b/scripts/popup.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <head>
-  <title>geolocation - popup</title>
+  <title>Reviewer Helper</title>
 </head>
 <body>
-  <h1>getting location...</h1>
+  <h1>Timer</h1>
+  <div id="timer"></div>
+  <div id="time">0.0</div>
+  <button id="startStopButton">Start / Stop</button>
   <script src="popup.js"></script>
 </body>
